# office-addins-mcp-server

./: .gitignore  AZURE_APP_SERVICE.md  LICENSE  README.md  README_zh_tw.md  app.py  azure.yaml  pyproject.toml  requirements.txt
.github/: .copilot-instructions.md
azure-functions/: .funcignore  QUICKSTART.md  README.md  deploy.sh  dev.sh  function_app.py  host.json  local.settings.json  mcp.json.template  pyproject.toml  requirements.txt
docs/: Office-AddIns-Search-API-Guide.md  execution_plan.md
examples/: README.md  demo_search.py  test_server.py
infra/: abbreviations.json  main.bicep
infra/modules/: app.bicep
office_addins_mcp_server/: server.py
office_addins_mcp_server/tools/: __init__.py  addin_tools.py
src/: server.py
src/OfficeAddinsMcpServer/: AddInTools.cs  Constants.cs  Program.cs
src/tools/: __init__.py  addin_tools.py
tests/: __init__.py  test_addin_tools.py
